11:
- Rebuild

10:
- Update libevent to 2.1.8-stable

9:
- Rebuild

8:
- Service after/requires multi-user.target network-online.target

7:
- Re-enable spaces in settings, in particular in incomplete path

6:
- Provide for custom initialisation script

5:
- Remove add-on repository

4:
- Optional incomplete-dir

3:
- Disable lightweight
- Rework settings

2:
- Edit disclaimer

1:
- Initial add-on